--- a/app/templates/trip_status.html
+++ b/app/templates/trip_status.html
@@ -30,14 +30,9 @@
                                 {% endfor %}
                             </p>
                             {% if details.map_url %}
-                            <iframe
-                              width="100%"
-                              height="250"
-                              style="border:0; margin-top: 8px; border-radius: 8px;"
-                              loading="lazy"
-                              allowfullscreen
-                              src="{{ details.map_url }}">
-                            </iframe>
+                            <a href="{{ details.map_url }}" target="_blank" class="text-blue-500 hover:underline">
+    View Route on MapmyIndia
+</a>
                             {% endif %}
                         </div>
                         {% endfor %}
